--- a/style-toggle.html
+++ b/style-toggle.html
@@ -4,7 +4,7 @@
         <title>INFO30005 Week 2</title>
     </head>
     <body>
-        <h1> HELLO WORLD!!!!!!!!!! </h1>
+        <h1> Group Project Heading </h1>
         <p id="text">Hello World!</p>
         <button onClick="document.getElementById('text').style.color = 'red'">Person 1</button>
     </body>
