--- a/style-toggle.html
+++ b/style-toggle.html
@@ -7,5 +7,6 @@
         <h1> HELLO WORLD!!!!!!!!!! </h1>
         <p id="text">Hello World!</p>
         <button onClick="document.getElementById('text').style.color = 'red'">Person 1</button>
+        <button onClick="document.getElementById('text').style.color = 'blue'">Andy</button>
     </body>
 </html>
