--- a/style-toggle.html
+++ b/style-toggle.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <p id="text">Hello World!</p>
-        <button onClick="document.getElementById('text').style.color = 'red'">Person 1</button>
+        <button onClick="document.getElementById('text').style.color = 'DarkViolet'">Person 1</button>
     </body>
 </html>
