week3 workshop work

--- a/style-toggle.html
+++ b/style-toggle.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
+	<img src='burger.jpeg' width="76.8" height="76.8">
+	<img src='logo2.png'width="136.6" height="76.8">
+	<img src='logo2.png'width="136.6" height="76.8" align='right'>
         <title>INFO30005 Week 2</title>
     </head>
     <body>
+	<iframe width="420" height="315"
+	src="https://www.youtube.com/watch?v=2TWelC6SHr8">
+	</iframe>
+
         <h1> HELLO WORLD!!!!!!!!!! </h1>
         <p id="text">Hello World!</p>
         <button onClick="document.getElementById('text').style.color = 'blue'">Person 1</button>
