--- a/style-toggle.html
+++ b/style-toggle.html
@@ -1,18 +1,33 @@
 <!DOCTYPE html>
+<html lang="en">
 <html>
     <head>
-	<img src='burger.jpeg' width="76.8" height="76.8">
+	<meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" href="mystyle.css" >
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<nav role="navigation">
+  <div id="menuToggle">
+    <input type="checkbox" />
+    <span></span>
+    <span></span>
+    <span></span>
+    <ul id="menu">
+      <a href="#"><li>About Diabetes</li></a>
+      <a href="#"><li>About Us</li></a>
+    </ul>
+  </div>
+</nav>
+<div2>
 	<img src='logo2.png'width="136.6" height="76.8">
 	<img src='logo2.png'width="136.6" height="76.8" align='right'>
         <title>INFO30005 Week 2</title>
+</div2>
     </head>
     <body>
-	<iframe width="420" height="315"
-	src="https://www.youtube.com/watch?v=2TWelC6SHr8">
-	</iframe>
-
-        <h1> HELLO WORLD!!!!!!!!!! </h1>
-        <p id="text">Hello World!</p>
-        <button onClick="document.getElementById('text').style.color = 'blue'">Person 1</button>
+        <h1> ABOUT DIABETES </h1>
+	<h2>
+	<iframe width="642" height="361" src="https://www.youtube.com/embed/2TWelC6SHr8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </h2>
+	<p>Hello World!</p>
     </body>
 </html>
