--- a/responsive_test.html
+++ b/responsive_test.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href="styles/styles.css">
-    <title>About Diabetes</title>
+    <title>Testing responsive design</title>
 </head>
 <body>
     <!-- Website header which contains logo and navbar content-->
@@ -23,7 +23,7 @@
 
     <!-- The 'body' of the website -->
     <div class="main-content">
-        <!-- TODO: REPLACE THIS WITH A RELEVANT VIDEO!!! -->
+        <!-- TODO: REPLACE THIS WITH A BETTER IMAGE -->
         <img class="image" src="assets/harold_01.jpg">
         
         <h1>About Diabetes</h1>
