--- a/about_diabetes.html
+++ b/about_diabetes.html
@@ -8,10 +8,9 @@
     <title>About Diabetes</title>
 </head>
 <body>
-    <!-- Website header which contains logo and navbar content-->
+    <!-- Website header which contains logo and navbar content (e.g. login)-->
     <header>
         <img class="logo" src="assets/TEST_LOGO.png" width="175" height="85" alt="Diabetes@Home Logo">
-        <!-- nav is where the header links (e.g. Login/Logoff) will be-->
         <nav>
             <ul class = "navbar_text">
                 <li><a href="#">About Us</a> </li>
@@ -42,6 +41,6 @@
     <!-- The bottom portion of the website with a list of URLs and more... -->
     <footer>
         <!-- TODO: BUILD FOOTER -->
-        
+
     </footer>
 </html>
