--- a/about_diabetes.html
+++ b/about_diabetes.html
@@ -1,46 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel = "stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <title>About Diabetes</title>
 </head>
+
 <body>
     <!-- Website header which contains logo and navbar content (e.g. login)-->
     <header>
-        <img class="logo" src="assets/TEST_LOGO.png" width="175" height="85" alt="Diabetes@Home Logo">
+        <img class="flexbox-navbar-logo" src="assets/TEST_LOGO.png" width="175" height="85" alt="Diabetes@Home Logo">
         <nav>
-            <ul class = "navbar_text">
+            <ul class="flexbox-navbar-text">
                 <li><a href="#">About Us</a> </li>
                 <li><a href="#">About Diabetes</a> </li>
             </ul>
         </nav>
-        <a class="login-button" href="#"><button class="navbar-button">Login</button></a>
+        <a class="login-button" href="#"><button class="flexbox-navbar-button">Login</button></a>
     </header>
 
     <!-- The 'body' of the website -->
-    <div class="main-content">
+    <div class="flexbox-main-content">
         <!-- TODO: REPLACE THIS WITH A RELEVANT VIDEO!!! -->
         <img class="image" src="assets/harold_01.jpg">
-        
+
         <h1>About Diabetes</h1>
-        <p> Diabetes mellitus, commonly known as diabetes, is a group of metabolic disorders characterized by a high blood sugar level over a prolonged period of time. Symptoms often include frequent urination, increased thirst and increased appetite. If left untreated, diabetes can cause many health complications. </p>
+        <p> Diabetes mellitus, commonly known as diabetes, is a group of metabolic disorders characterized by a high
+            blood sugar level over a prolonged period of time. Symptoms often include frequent urination, increased
+            thirst and increased appetite. If left untreated, diabetes can cause many health complications. </p>
         <br>
-        <p>Acute complications can include diabetic ketoacidosis, hyperosmolar hyperglycemic state, or death. Serious long-term complications include cardiovascular disease, stroke, chronic kidney disease, foot ulcers, damage to the nerves, damage to the eyes and cognitive impairment.</p>
+        <p>Acute complications can include diabetic ketoacidosis, hyperosmolar hyperglycemic state, or death. Serious
+            long-term complications include cardiovascular disease, stroke, chronic kidney disease, foot ulcers, damage
+            to the nerves, damage to the eyes and cognitive impairment.</p>
         <br>
         <h2>Useful links</h2>
         <p>Here are some useful resources if you want to find out more.</p>
-        <li><a href="https://www.who.int/news-room/fact-sheets/detail/diabetes">World Health Organisation - Diabetes Factsheet</a></li>
+        <li><a href="https://www.who.int/news-room/fact-sheets/detail/diabetes">World Health Organisation - Diabetes
+                Factsheet</a></li>
         <li><a href="https://www.diabetesaustralia.com.au/">Diabetes Australia</a></li>
         <li><a href="https://www.ndss.com.au/services/ndss-helpline/">National Diabetes Service Scheme</a></li>
-      </div>
-</body>
+    </div>
 
     <!-- The bottom portion of the website with a list of URLs and more... -->
     <footer>
-        <!-- TODO: BUILD FOOTER -->
-
+        <div class="flexbox-footer-container">
+            <ul class="flexbox-footer-row">
+                <li>Home</li>
+                <li>About us</li>
+                <li>Contact us</li>
+            </ul>
+            <p>&copy; 2022 Diabetes@Home</p>
+        </div>
     </footer>
+</body>
+
 </html>
