changed picture to embeded video

--- a/about_diabetes.html
+++ b/about_diabetes.html
@@ -25,7 +25,7 @@
     <!-- The 'body' of the website -->
     <div class="flexbox-main-content">
         <!-- TODO: REPLACE THIS WITH A RELEVANT VIDEO!!! -->
-        <img class="image" src="assets/harold_01.jpg">
+        <iframe width="642" height="361" src="https://www.youtube.com/embed/wZAjVQWbMlE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <h1>About Diabetes</h1>
         <p> Diabetes mellitus, commonly known as diabetes, is a group of metabolic disorders characterized by a high
