changed button location

--- a/about_diabetes.html
+++ b/about_diabetes.html
@@ -15,8 +15,8 @@
         <img class="flexbox-navbar-logo" src="assets/TEST_LOGO.png" width="175" height="85" alt="Diabetes@Home Logo">
         <nav>
             <ul class="flexbox-navbar-text">
-                <li><a href="#">About Us</a> </li>
-                <li><a href="#">About Diabetes</a> </li>
+		<li><a href="about_diabetes.html">About Diabetes</a> </li>
+                <li><a href="about_site.html">About Us</a> </li>
             </ul>
         </nav>
         <a class="login-button" href="#"><button class="flexbox-navbar-button">Login</button></a>
