Moved scalable photo to center

--- a/about_site.html
+++ b/about_site.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/styles.css">
-    <title>About Diabetes</title>
+    <title>About Us</title>
 </head>
 
 <body>
@@ -24,17 +24,21 @@
 
     <!-- The 'body' of the website -->
     <div class="flexbox-main-content">
-        <!-- TODO: REPLACE THIS WITH A RELEVANT VIDEO!!! -->
-        <img src="https://d1edr79mp9g5zc.cloudfront.net/5eb0affe-1991-449b-bfc0-a5a0516548bf/8906c4c8-7f6f-47c0-bdff-1181b4f12352/8906c4c8-7f6f-47c0-bdff-1181b4f12352_source__v.jpg" alt="Flowers in Chania">
+        <!-- TODO: REPLACE THIS WITH A NON COPYRIGHT PHOTO!!! -->
+        <img class="center" src="https://d1edr79mp9g5zc.cloudfront.net/5eb0affe-1991-449b-bfc0-a5a0516548bf/8906c4c8-7f6f-47c0-bdff-1181b4f12352/8906c4c8-7f6f-47c0-bdff-1181b4f12352_source__v.jpg" alt="Flowers in Chania">
+
+        <br>
 
         <h1>About Us</h1>
-        <p> Diabetes@Home was established in 2022 and is the national body for people affected by all types of diabetes and those at risk. Through leadership, prevention, management and research, Diabetes Australia is committed to reducing the impact of diabetes. We work in partnership with diabetes health professionals and educators, researchers and healthcare providers to minimise the impact of diabetes on the Australian community.
-        </p>
+        <p> Diabetes@Home was established in 2022 and is the national body for people affected by all types of diabetes and those at risk. Through leadership, prevention, management and research, Diabetes Australia is committed to reducing the impact of diabetes. We work in partnership with diabetes health professionals and educators, researchers and healthcare providers to minimise the impact of diabetes on the Australian community.</p>
         <br>
         <p>Diabetes Australia consists of member organisations, each falling into one (at least) of the following categories:</p>
         <li>Specialist – medical, educational, scientific</li> 
         <li>Community – state and territory diabetes organisations</li>   
         <li> Research – Diabetes Australia Research Trust, Kellion Research Foundation, Diabetes Research Foundation – Western Australia.</li>
+    
+        <br>
+
     </div>
 
     <!-- The bottom portion of the website with a list of URLs and more... -->
