center/scalable video

--- a/about_diabetes.html
+++ b/about_diabetes.html
@@ -24,9 +24,13 @@
 
     <!-- The 'body' of the website -->
     <div class="flexbox-main-content">
-        <!-- TODO: REPLACE THIS WITH A RELEVANT VIDEO!!! -->
-        <img class="image" src="assets/harold_01.jpg">
-
+        <!-- The video-wrapper div stores the YouTube video -->
+        <div class="video-wrapper">
+            <div class="video-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/bIhy-Rb2xp4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </div>
+        
         <h1>About Diabetes</h1>
         <p> Diabetes mellitus, commonly known as diabetes, is a group of metabolic disorders characterized by a high
             blood sugar level over a prolonged period of time. Symptoms often include frequent urination, increased
