--- a/about_diabetes.html
+++ b/about_diabetes.html
@@ -31,6 +31,7 @@
             </div>
         </div>
         
+        <br>
         <h1>About Diabetes</h1>
         <p> Diabetes mellitus, commonly known as diabetes, is a group of metabolic disorders characterized by a high
             blood sugar level over a prolonged period of time. Symptoms often include frequent urination, increased
@@ -42,10 +43,11 @@
         <br>
         <h2>Useful links</h2>
         <p>Here are some useful resources if you want to find out more.</p>
-        <li><a href="https://www.who.int/news-room/fact-sheets/detail/diabetes">World Health Organisation - Diabetes
-                Factsheet</a></li>
-        <li><a href="https://www.diabetesaustralia.com.au/">Diabetes Australia</a></li>
-        <li><a href="https://www.ndss.com.au/services/ndss-helpline/">National Diabetes Service Scheme</a></li>
+        <li><a href="https://www.who.int/news-room/fact-sheets/detail/diabetes"><u>World Health Organisation - Diabetes Factsheet</u></a></li>
+        <li><a href="https://www.diabetesaustralia.com.au/"><u>Diabetes Australia</u></a></li>
+        <li><a href="https://www.ndss.com.au/services/ndss-helpline/"><u>National Diabetes Service Scheme</u></a></li>
+        <br>
+        
     </div>
 
     <!-- The bottom portion of the website with a list of URLs and more... -->
