Added hamburger and animation

--- a/about_diabetes.html
+++ b/about_diabetes.html
@@ -6,12 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/animation.css">
     <title>About Diabetes</title>
 </head>
 
 <body>
     <!-- Website header which contains logo and navbar content (e.g. login)-->
     <header>
+        <label class="flexbox-navbar-hamburger">
+            <div class="hamburger"></div>
+            <div class="hamburger"></div>
+            <div class="hamburger"></div>
+        </label>
         <img class="flexbox-navbar-logo" src="assets/TEST_LOGO.png" width="175" height="85" alt="Diabetes@Home Logo">
         <nav>
             <ul class="flexbox-navbar-text">
@@ -27,7 +33,7 @@
         <!-- The video-wrapper div stores the YouTube video -->
         <div class="video-wrapper">
             <div class="video-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/bIhy-Rb2xp4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/bIhy-Rb2xp4?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
         
@@ -47,7 +53,7 @@
         <li><a href="https://www.diabetesaustralia.com.au/"><u>Diabetes Australia</u></a></li>
         <li><a href="https://www.ndss.com.au/services/ndss-helpline/"><u>National Diabetes Service Scheme</u></a></li>
         <br>
-        
+
     </div>
 
     <!-- The bottom portion of the website with a list of URLs and more... -->
