--- a/about_site.html
+++ b/about_site.html
@@ -12,6 +12,11 @@
 <body>
     <!-- Website header which contains logo and navbar content (e.g. login)-->
     <header>
+        <label class="flexbox-navbar-hamburger">
+            <div class="hamburger"></div>
+            <div class="hamburger"></div>
+            <div class="hamburger"></div>
+        </label>
         <img class="flexbox-navbar-logo" src="assets/TEST_LOGO.png" width="175" height="85" alt="Diabetes@Home Logo">
         <nav>
             <ul class="flexbox-navbar-text">
