--- a/about_diabetes.html
+++ b/about_diabetes.html
@@ -36,7 +36,6 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/bIhy-Rb2xp4?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
-        <br>
         
         <br>
         <h1>About Diabetes</h1>
@@ -66,7 +65,16 @@
                 <li>About us</li>
                 <li>Contact us</li>
             </ul>
-            <p>&copy; 2022 Diabetes@Home</p>
+            <ul class = "flexbox-footer-row-horizontal">
+                <li>&copy 2022 Diabetes@Home</li>
+                <li>|</li>
+                <li>Terms & Conditions</li>
+                <li>|</li>
+                <li>Privacy Policy</li>
+                <li>|</li>
+                <li>Cookie Policy</li>
+            </ul>
+            <!-- <p>&copy; 2022 Diabetes@Home</p> -->
         </div>
     </footer>
 </body>
