(1) fix bug that caused lists to not be aligned properly. (2) update footer for About Us

--- a/about_site.html
+++ b/about_site.html
@@ -38,10 +38,11 @@
         <p> Diabetes@Home was established in 2022 and is the national body for people affected by all types of diabetes and those at risk. Through leadership, prevention, management and research, Diabetes Australia is committed to reducing the impact of diabetes. We work in partnership with diabetes health professionals and educators, researchers and healthcare providers to minimise the impact of diabetes on the Australian community.</p>
         <br>
         <p>Diabetes Australia consists of member organisations, each falling into one (at least) of the following categories:</p>
-        <li>Specialist – medical, educational, scientific</li> 
-        <li>Community – state and territory diabetes organisations</li>   
-        <li> Research – Diabetes Australia Research Trust, Kellion Research Foundation, Diabetes Research Foundation – Western Australia.</li>
-    
+        <ul class="flexbox-main-content-lists">
+            <li>Specialist – medical, educational, scientific</li> 
+            <li>Community – state and territory diabetes organisations</li>   
+            <li> Research – Diabetes Australia Research Trust, Kellion Research Foundation, Diabetes Research Foundation – Western Australia.</li>
+        </ul>
         <br>
 
     </div>
@@ -54,7 +55,16 @@
                 <li>About us</li>
                 <li>Contact us</li>
             </ul>
-            <p>&copy; 2022 Diabetes@Home</p>
+            <ul class = "flexbox-footer-row-horizontal">
+                <li>&copy 2022 Diabetes@Home</li>
+                <li>|</li>
+                <li>Terms & Conditions</li>
+                <li>|</li>
+                <li>Privacy Policy</li>
+                <li>|</li>
+                <li>Cookie Policy</li>
+            </ul>
+            <!-- <p>&copy; 2022 Diabetes@Home</p> -->
         </div>
     </footer>
 </body>
