--- a/about_diabetes.html
+++ b/about_diabetes.html
@@ -49,9 +49,14 @@
         <br>
         <h2>Useful links</h2>
         <p>Here are some useful resources if you want to find out more.</p>
-        <li><a href="https://www.who.int/news-room/fact-sheets/detail/diabetes"><u>World Health Organisation - Diabetes Factsheet</u></a></li>
+        <ul class="flexbox-main-content-lists">
+            <li><a href="https://www.who.int/news-room/fact-sheets/detail/diabetes"><u>World Health Organisation - Diabetes Factsheet</u></a></li>
+            <li><a href="https://www.diabetesaustralia.com.au/"><u>Diabetes Australia</u></a></li>
+            <li><a href="https://www.ndss.com.au/services/ndss-helpline/"><u>National Diabetes Service Scheme</u></a></li>
+        </ul>
+        <!-- <li><a href="https://www.who.int/news-room/fact-sheets/detail/diabetes"><u>World Health Organisation - Diabetes Factsheet</u></a></li>
         <li><a href="https://www.diabetesaustralia.com.au/"><u>Diabetes Australia</u></a></li>
-        <li><a href="https://www.ndss.com.au/services/ndss-helpline/"><u>National Diabetes Service Scheme</u></a></li>
+        <li><a href="https://www.ndss.com.au/services/ndss-helpline/"><u>National Diabetes Service Scheme</u></a></li> -->
         <br>
 
     </div>
