added footer logo to footer

--- a/about_diabetes.html
+++ b/about_diabetes.html
@@ -66,9 +66,11 @@
     <footer>
         <div class="flexbox-footer-container">
             <ul class="flexbox-footer-row">
+                <img class="flexbox-footer-logo" src="assets/logo_transparent_cropped.png" width="175" height="85" alt="Diabetes@Home Logo">
                 <li>Home</li>
                 <li>About us</li>
                 <li>Contact us</li>
+            <!-- <img class="flexbox-footer-logo" src="assets/logo_transparent_cropped.png" width="175" height="85" alt="Diabetes@Home Logo"> -->
             </ul>
             <ul class = "flexbox-footer-row-horizontal">
                 <li>&copy 2022 Diabetes@Home</li>
