Added working footer links and link colour

--- a/about_diabetes.html
+++ b/about_diabetes.html
@@ -21,8 +21,8 @@
         <img class="flexbox-navbar-logo" src="assets/TEST_LOGO.png" width="175" height="85" alt="Diabetes@Home Logo">
         <nav>
             <ul class="flexbox-navbar-text">
-		<li><a href="about_diabetes.html">About Diabetes</a> </li>
-                <li><a href="about_site.html">About Us</a> </li>
+		<li><a href="about_diabetes.html">About Diabetes</a></li>
+                <li><a href="about_site.html">About Us</a></li>
             </ul>
         </nav>
         <a class="login-button" href="#"><button class="flexbox-navbar-button">Login</button></a>
@@ -54,9 +54,6 @@
             <li><a href="https://www.diabetesaustralia.com.au/"><u>Diabetes Australia</u></a></li>
             <li><a href="https://www.ndss.com.au/services/ndss-helpline/"><u>National Diabetes Service Scheme</u></a></li>
         </ul>
-        <!-- <li><a href="https://www.who.int/news-room/fact-sheets/detail/diabetes"><u>World Health Organisation - Diabetes Factsheet</u></a></li>
-        <li><a href="https://www.diabetesaustralia.com.au/"><u>Diabetes Australia</u></a></li>
-        <li><a href="https://www.ndss.com.au/services/ndss-helpline/"><u>National Diabetes Service Scheme</u></a></li> -->
         <br>
 
     </div>
@@ -66,9 +63,9 @@
     <footer>
         <div class="flexbox-footer-container">
             <ul class="flexbox-footer-row">
-                <li>Home</li>
-                <li>About us</li>
-                <li>Contact us</li>
+                <li><a href="about_diabetes.html">Home</a></li>
+                <li><a href="about_site.html">About us</a></li>
+                <li><a href="#" onclick="return false;">Contact us</a></li>
             </ul>
             <ul class = "flexbox-footer-row-horizontal">
                 <li>&copy 2022 Diabetes@Home</li>
