--- a/about_site.html
+++ b/about_site.html
@@ -51,9 +51,9 @@
     <footer>
         <div class="flexbox-footer-container">
             <ul class="flexbox-footer-row">
-                <li>Home</li>
-                <li>About us</li>
-                <li>Contact us</li>
+                <li><a href="about_diabetes.html">Home</a></li>
+                <li><a href="about_site.html">About us</a></li>
+                <li><a href="#" onclick="return false;">Contact us</a></li>
             </ul>
             <ul class = "flexbox-footer-row-horizontal">
                 <li>&copy 2022 Diabetes@Home</li>
