--- a/about_diabetes.html
+++ b/about_diabetes.html
@@ -66,7 +66,7 @@
                 <img class="flexbox-footer-logo" src="assets/logo_transparent_cropped.png" width="175" height="85" alt="Diabetes@Home Logo">
                 <li><a href="">Home</a></li>
                 <li><a href="about_site.html">About us</a></li>
-                <li><a href="">Contact us</a></li>
+                <li><a href="#" onclick="return false;">Contact us</a></li>
             <!-- <img class="flexbox-footer-logo" src="assets/logo_transparent_cropped.png" width="175" height="85" alt="Diabetes@Home Logo"> -->
             </ul>
             <ul class = "flexbox-footer-row-horizontal">
