--- a/about_site.html
+++ b/about_site.html
@@ -30,7 +30,7 @@
     <!-- The 'body' of the website -->
     <div class="flexbox-main-content">
         <!-- TODO: REPLACE THIS WITH A NON COPYRIGHT PHOTO!!! -->
-        <img class="center" src="https://d1edr79mp9g5zc.cloudfront.net/5eb0affe-1991-449b-bfc0-a5a0516548bf/8906c4c8-7f6f-47c0-bdff-1181b4f12352/8906c4c8-7f6f-47c0-bdff-1181b4f12352_source__v.jpg" alt="Flowers in Chania">
+        <img class="center" src="https://images.unsplash.com/photo-1576169210859-6796c4b93c32?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="Diabetes Photo">
 
         <br>
 
