make functional hamburger menu. Clean up styles.css

--- a/about_diabetes.html
+++ b/about_diabetes.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,19 +13,46 @@
     <!-- Website header which contains logo and navbar content (e.g. login)-->
     <header>
         <label class="flexbox-navbar-hamburger">
-            <div class="hamburger"></div>
-            <div class="hamburger"></div>
-            <div class="hamburger"></div>
+            <!-- <button class="hamburger" id = "hamburger"> -->
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <!-- <span class="hamburger"></span>
+            <span class="hamburger"></span>
+            <span class="hamburger"></span> -->
+
         </label>
+        
         <img class="flexbox-navbar-logo" src="assets/logo_navbar.png" width="175" height="85" alt="Diabetes@Home Logo">
         <nav>
             <ul class="flexbox-navbar-text">
-		<li><a href="about_diabetes.html">About Diabetes</a></li>
-                <li><a href="about_site.html">About Us</a></li>
+                <!-- <li class="nav-item" >TEST DELETE</li> -->
+                <li class="nav-item">
+                    <a href="about_diabetes.html">About Diabetes</a>
+                </li>
+                <li class="nav-item">
+                    <a href="about_site.html">About Us</a>
+                </li>
             </ul>
         </nav>
         <a class="login-button" href="#"><button class="flexbox-navbar-button">Log in</button></a>
     </header>
+
+
+
+    <!-- Burger sidebar -->
+    <div id="myNav" class ="sidebar">
+        <div class="sidebar-content">
+            <a href="about_diabetes.html">About Diabetes</a>
+            <br>
+            <a href="about_site.html">About Us</a>
+            <br>
+            <br>
+            <a href="#" class="close-btn">Close</a>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
 
     <!-- The 'body' of the website -->
     <div class="flexbox-main-content">
