added comments and cleaned formatting

--- a/about_diabetes.html
+++ b/about_diabetes.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,19 +11,14 @@
 </head>
 
 <body>
-    <!-- Website header which contains logo and navbar content (e.g. login)-->
+    <!-- Website header which contains navbar elements (hamburger icon, logo, links and log in) -->
     <header>
         <label class="flexbox-navbar-hamburger">
-            <!-- <button class="hamburger" id = "hamburger"> -->
             <div class="bar"></div>
             <div class="bar"></div>
             <div class="bar"></div>
-            <!-- <span class="hamburger"></span>
-            <span class="hamburger"></span>
-            <span class="hamburger"></span> -->
-
         </label>
-        
+
         <img class="flexbox-navbar-logo" src="assets/logo_navbar.png" width="175" height="85" alt="Diabetes@Home Logo">
         <nav>
             <ul class="flexbox-navbar-text">
@@ -39,9 +35,8 @@
     </header>
 
 
-
-    <!-- Burger sidebar -->
-    <div id="myNav" class ="sidebar">
+    <!-- Hamburger sidebar overlay which contains links. Requires Javascript. -->
+    <div id="myNav" class="sidebar">
         <div class="sidebar-content">
             <a href="about_diabetes.html">About Diabetes</a>
             <br>
@@ -51,51 +46,60 @@
             <a href="#" class="close-btn">Close</a>
         </div>
     </div>
-
     <script src="script.js"></script>
 
-    <!-- The 'body' of the website -->
-    <div class="flexbox-main-content">
-        <!-- The video-wrapper div stores the YouTube video -->
-        <div class="video-wrapper">
-            <div class="video-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/bIhy-Rb2xp4?autoplay=1&mute=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <!-- Website body - everything in between the header and the footer -->
+    <main>
+        <div class="flexbox-main-content">
+            <!-- The video-wrapper div stores the YouTube video -->
+            <div class="video-wrapper">
+                <div class="video-container">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/bIhy-Rb2xp4?autoplay=1&mute=1"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
             </div>
+
+            <br>
+            <h1>About Diabetes</h1>
+            <p> Diabetes mellitus, commonly known as diabetes, is a group of metabolic disorders characterized by a high
+                blood sugar level over a prolonged period of time. Symptoms often include frequent urination, increased
+                thirst and increased appetite. If left untreated, diabetes can cause many health complications. </p>
+            <br>
+            <p>Acute complications can include diabetic ketoacidosis, hyperosmolar hyperglycemic state, or death.
+                Serious
+                long-term complications include cardiovascular disease, stroke, chronic kidney disease, foot ulcers,
+                damage
+                to the nerves, damage to the eyes and cognitive impairment.</p>
+            <br>
+            <h2>Useful links</h2>
+            <p>Here are some useful resources if you want to find out more.</p>
+            <ul class="flexbox-main-content-lists">
+                <li><a href="https://www.who.int/news-room/fact-sheets/detail/diabetes"><u>World Health Organisation -
+                            Diabetes Factsheet</u></a></li>
+                <li><a href="https://www.diabetesaustralia.com.au/"><u>Diabetes Australia</u></a></li>
+                <li><a href="https://www.ndss.com.au/services/ndss-helpline/"><u>National Diabetes Service
+                            Scheme</u></a>
+                </li>
+            </ul>
+            <br>
         </div>
-        
         <br>
-        <h1>About Diabetes</h1>
-        <p> Diabetes mellitus, commonly known as diabetes, is a group of metabolic disorders characterized by a high
-            blood sugar level over a prolonged period of time. Symptoms often include frequent urination, increased
-            thirst and increased appetite. If left untreated, diabetes can cause many health complications. </p>
-        <br>
-        <p>Acute complications can include diabetic ketoacidosis, hyperosmolar hyperglycemic state, or death. Serious
-            long-term complications include cardiovascular disease, stroke, chronic kidney disease, foot ulcers, damage
-            to the nerves, damage to the eyes and cognitive impairment.</p>
-        <br>
-        <h2>Useful links</h2>
-        <p>Here are some useful resources if you want to find out more.</p>
-        <ul class="flexbox-main-content-lists">
-            <li><a href="https://www.who.int/news-room/fact-sheets/detail/diabetes"><u>World Health Organisation - Diabetes Factsheet</u></a></li>
-            <li><a href="https://www.diabetesaustralia.com.au/"><u>Diabetes Australia</u></a></li>
-            <li><a href="https://www.ndss.com.au/services/ndss-helpline/"><u>National Diabetes Service Scheme</u></a></li>
-        </ul>
-        <br>
+    </main>
 
-    </div>
 
-    <br>
-    <!-- The bottom portion of the website with a list of URLs and more... -->
+    <!-- Footer: The bottom of the website with a list of URLs and more... -->
     <footer>
         <div class="flexbox-footer-container">
             <ul class="flexbox-footer-row">
-                <img class="flexbox-footer-logo" src="assets/logo_footer.png" width="175" height="85" alt="Diabetes@Home Logo">
+                <img class="flexbox-footer-logo" src="assets/logo_footer.png" width="175" height="85"
+                    alt="Diabetes@Home Logo">
                 <li><a href="">Home</a></li>
                 <li><a href="about_site.html">About us</a></li>
                 <li><a href="#" onclick="javascript:void(0)">Contact us</a></li>
-            <!-- <img class="flexbox-footer-logo" src="assets/logo_transparent_cropped.png" width="175" height="85" alt="Diabetes@Home Logo"> -->
             </ul>
-            <ul class = "flexbox-footer-row-horizontal">
+            <ul class="flexbox-footer-row-horizontal">
                 <li>&copy 2022 Diabetes@Home</li>
                 <li>|</li>
                 <li><a href="">Terms & Conditions</a></li>
@@ -104,7 +108,6 @@
                 <li>|</li>
                 <li><a href="">Cookie Policy</a></li>
             </ul>
-            <!-- <p>&copy; 2022 Diabetes@Home</p> -->
         </div>
     </footer>
 </body>
