Clicking 'home' sends you to about_diabetes.html

--- a/about_diabetes.html
+++ b/about_diabetes.html
@@ -93,7 +93,7 @@
             <ul class="flexbox-footer-row">
                 <img class="flexbox-footer-logo" src="assets/logo_footer.png" width="175" height="85"
                     alt="Diabetes@Home Logo">
-                <li><a href="#" onclick="javascript:void(0)">Home</a></li>
+                <li><a href="about_diabetes.html">Home</a></li>
                 <li><a href="about_site.html">About us</a></li>
                 <li><a href="#" onclick="javascript:void(0)">Contact us</a></li>
             </ul>
