--- a/about_site.html
+++ b/about_site.html
@@ -18,7 +18,8 @@
             <div class="bar"></div>
         </label>
 
-        <img class="flexbox-navbar-logo" src="assets/logo_navbar.png" width="175" height="85" alt="Diabetes@Home Logo">
+        <!-- <img class="flexbox-navbar-logo" src="assets/logo_navbar.png" width="175" height="85" alt="Diabetes@Home Logo"> -->
+        <a href="about_diabetes.html" class="flexbox-navbar-logo"><img src="assets/logo_navbar.png" width="175px" height="85px" alt="Diabetes@Home Logo"></a>
         <nav>
             <ul class="flexbox-navbar-text">
                 <li class="nav-item">
