--- a/about_diabetes.html
+++ b/about_diabetes.html
@@ -35,7 +35,7 @@
 
 
     <!-- Hamburger sidebar overlay which contains links. Requires Javascript. -->
-    <div id="myNav" class="sidebar">
+    <div class="sidebar">
         <div class="sidebar-content">
             <a href="about_diabetes.html">About Diabetes</a>
             <br>
