added sections to html files

--- a/about_diabetes.html
+++ b/about_diabetes.html
@@ -18,8 +18,8 @@
             <div class="bar"></div>
         </label>
 
-        <!-- <img class="flexbox-navbar-logo" src="assets/logo_navbar.png" width="175" height="85" alt="Diabetes@Home Logo"> -->
-        <a href="about_diabetes.html" class="flexbox-navbar-logo"><img src="assets/logo_navbar.png" width="175px" height="85px" alt="Diabetes@Home Logo"></a>
+        <a href="about_diabetes.html" class="flexbox-navbar-logo"><img src="assets/logo_navbar.png" width="175px"
+                height="85px" alt="Diabetes@Home Logo"></a>
         <nav>
             <ul class="flexbox-navbar-text">
                 <li class="nav-item">
@@ -50,6 +50,7 @@
     <!-- Website body - everything in between the header and the footer -->
     <main>
         <div class="flexbox-main-content">
+            
             <!-- The video-wrapper div stores the YouTube video -->
             <div class="video-wrapper">
                 <div class="video-container">
@@ -61,27 +62,35 @@
             </div>
 
             <br>
-            <h1>About Diabetes</h1>
-            <p> Diabetes mellitus, commonly known as diabetes, is a group of metabolic disorders characterized by a high
-                blood sugar level over a prolonged period of time. Symptoms often include frequent urination, increased
-                thirst and increased appetite. If left untreated, diabetes can cause many health complications. </p>
+            <section>
+                <h1>About Diabetes</h1>
+                <p> Diabetes mellitus, commonly known as diabetes, is a group of metabolic disorders characterized by a
+                    high
+                    blood sugar level over a prolonged period of time. Symptoms often include frequent urination,
+                    increased
+                    thirst and increased appetite. If left untreated, diabetes can cause many health complications. </p>
+                <br>
+                <p>Acute complications can include diabetic ketoacidosis, hyperosmolar hyperglycemic state, or death.
+                    Serious
+                    long-term complications include cardiovascular disease, stroke, chronic kidney disease, foot ulcers,
+                    damage
+                    to the nerves, damage to the eyes and cognitive impairment.</p>
+            </section>
+
             <br>
-            <p>Acute complications can include diabetic ketoacidosis, hyperosmolar hyperglycemic state, or death.
-                Serious
-                long-term complications include cardiovascular disease, stroke, chronic kidney disease, foot ulcers,
-                damage
-                to the nerves, damage to the eyes and cognitive impairment.</p>
-            <br>
-            <h2>Useful links</h2>
-            <p>Here are some useful resources if you want to find out more.</p>
-            <ul class="flexbox-main-content-lists">
-                <li><a href="https://www.who.int/news-room/fact-sheets/detail/diabetes"><u>World Health Organisation -
-                            Diabetes Factsheet</u></a></li>
-                <li><a href="https://www.diabetesaustralia.com.au/"><u>Diabetes Australia</u></a></li>
-                <li><a href="https://www.ndss.com.au/services/ndss-helpline/"><u>National Diabetes Service
-                            Scheme</u></a>
-                </li>
-            </ul>
+            <section>
+                <h2>Useful links</h2>
+                <p>Here are some useful resources if you want to find out more.</p>
+                <ul class="flexbox-main-content-lists">
+                    <li><a href="https://www.who.int/news-room/fact-sheets/detail/diabetes"><u>World Health Organisation
+                                -
+                                Diabetes Factsheet</u></a></li>
+                    <li><a href="https://www.diabetesaustralia.com.au/"><u>Diabetes Australia</u></a></li>
+                    <li><a href="https://www.ndss.com.au/services/ndss-helpline/"><u>National Diabetes Service
+                                Scheme</u></a>
+                    </li>
+                </ul>
+            </section>
             <br>
         </div>
         <br>
