--- a/about_site.html
+++ b/about_site.html
@@ -18,8 +18,8 @@
             <div class="bar"></div>
         </label>
 
-        <!-- <img class="flexbox-navbar-logo" src="assets/logo_navbar.png" width="175" height="85" alt="Diabetes@Home Logo"> -->
-        <a href="about_diabetes.html" class="flexbox-navbar-logo"><img src="assets/logo_navbar.png" width="175px" height="85px" alt="Diabetes@Home Logo"></a>
+        <a href="about_diabetes.html" class="flexbox-navbar-logo"><img src="assets/logo_navbar.png" width="175px"
+                height="85px" alt="Diabetes@Home Logo"></a>
         <nav>
             <ul class="flexbox-navbar-text">
                 <li class="nav-item">
@@ -51,31 +51,33 @@
     <!-- Website body - everything in between the header and the footer -->
     <main>
         <div class="flexbox-main-content">
-            <!-- TODO: REPLACE THIS WITH A NON COPYRIGHT PHOTO!!! -->
             <img class="center"
                 src="https://images.unsplash.com/photo-1576169210859-6796c4b93c32?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
                 alt="Diabetes Photo">
-
             <br>
 
-            <h1>About Us</h1>
-            <p> Diabetes@Home was established in 2022 and is the national body for people affected by all types of
-                diabetes
-                and those at risk. Through leadership, prevention, management and research, Diabetes Australia is
-                committed
-                to reducing the impact of diabetes. We work in partnership with diabetes health professionals and
-                educators,
-                researchers and healthcare providers to minimise the impact of diabetes on the Australian community.</p>
-            <br>
-            <p>Diabetes Australia consists of member organisations, each falling into one (at least) of the following
-                categories:</p>
-            <ul class="flexbox-main-content-lists">
-                <li>Specialist – medical, educational, scientific</li>
-                <li>Community – state and territory diabetes organisations</li>
-                <li> Research – Diabetes Australia Research Trust, Kellion Research Foundation, Diabetes Research
-                    Foundation
-                    – Western Australia.</li>
-            </ul>
+            <section>
+                <h1>About Us</h1>
+                <p> Diabetes@Home was established in 2022 and is the national body for people affected by all types of
+                    diabetes
+                    and those at risk. Through leadership, prevention, management and research, Diabetes Australia is
+                    committed
+                    to reducing the impact of diabetes. We work in partnership with diabetes health professionals and
+                    educators,
+                    researchers and healthcare providers to minimise the impact of diabetes on the Australian community.
+                </p>
+                <br>
+                <p>Diabetes Australia consists of member organisations, each falling into one (at least) of the
+                    following
+                    categories:</p>
+                <ul class="flexbox-main-content-lists">
+                    <li>Specialist – medical, educational, scientific</li>
+                    <li>Community – state and territory diabetes organisations</li>
+                    <li> Research – Diabetes Australia Research Trust, Kellion Research Foundation, Diabetes Research
+                        Foundation
+                        – Western Australia.</li>
+                </ul>
+            </section>
             <br>
         </div>
     </main>
