converted existing repo to express/handlebars

--- a/misc/about_site.html
+++ b/misc/about_site.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/styles.css">
-    <title>About Diabetes</title>
+    <link rel="stylesheet" href="public/css/styles.css">
+    <title>About Us</title>
 </head>
 
 <body>
@@ -37,7 +37,7 @@
     <!-- Hamburger sidebar overlay which contains links. Requires Javascript. -->
     <div class="sidebar">
         <div class="sidebar-content">
-            <a href="about_diabetes.html">About Diabetes</a>
+            <a href="about_diabetes.hbs">About Diabetes</a>
             <br>
             <a href="about_site.html">About Us</a>
             <br>
@@ -45,54 +45,41 @@
             <a href="#" class="close-btn">Close</a>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="scripts/script.js"></script>
+
 
     <!-- Website body - everything in between the header and the footer -->
     <main>
         <div class="flexbox-main-content">
-            <!-- The video-wrapper div stores the YouTube video -->
-            <div class="video-wrapper">
-                <div class="video-container">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/bIhy-Rb2xp4?autoplay=1&mute=1"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
-                </div>
-            </div>
-
+            <img class="center"
+                src="https://images.unsplash.com/photo-1576169210859-6796c4b93c32?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
+                alt="Diabetes Photo">
             <br>
+
             <section>
-                <h1>About Diabetes</h1>
-                <p> Diabetes mellitus, commonly known as diabetes, is a group of metabolic disorders characterized by a
-                    high
-                    blood sugar level over a prolonged period of time. Symptoms often include frequent urination,
-                    increased
-                    thirst and increased appetite. If left untreated, diabetes can cause many health complications. </p>
+                <h1>About Us</h1>
+                <p> Diabetes@Home was established in 2022 and is the national body for people affected by all types of
+                    diabetes
+                    and those at risk. Through leadership, prevention, management and research, Diabetes Australia is
+                    committed
+                    to reducing the impact of diabetes. We work in partnership with diabetes health professionals and
+                    educators,
+                    researchers and healthcare providers to minimise the impact of diabetes on the Australian community.
+                </p>
                 <br>
-                <p>Acute complications can include diabetic ketoacidosis, hyperosmolar hyperglycemic state, or death.
-                    Serious
-                    long-term complications include cardiovascular disease, stroke, chronic kidney disease, foot ulcers,
-                    damage
-                    to the nerves, damage to the eyes and cognitive impairment.</p>
-            </section>
-
-            <br>
-            <section>
-                <h2>Useful links</h2>
-                <p>Here are some useful resources if you want to find out more.</p>
+                <p>Diabetes Australia consists of member organisations, each falling into one (at least) of the
+                    following
+                    categories:</p>
                 <ul class="flexbox-main-content-lists">
-                    <li><a href="https://www.who.int/news-room/fact-sheets/detail/diabetes"><u>World Health Organisation
-                                -
-                                Diabetes Factsheet</u></a></li>
-                    <li><a href="https://www.diabetesaustralia.com.au/"><u>Diabetes Australia</u></a></li>
-                    <li><a href="https://www.ndss.com.au/services/ndss-helpline/"><u>National Diabetes Service
-                                Scheme</u></a>
-                    </li>
+                    <li>Specialist – medical, educational, scientific</li>
+                    <li>Community – state and territory diabetes organisations</li>
+                    <li> Research – Diabetes Australia Research Trust, Kellion Research Foundation, Diabetes Research
+                        Foundation
+                        – Western Australia.</li>
                 </ul>
             </section>
             <br>
         </div>
-        <br>
     </main>
 
 
